//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Project {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  projectUsers ProjectUser [not null]
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  username String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  role Role [not null]
  posts Post [not null]
  projectUsers ProjectUser [not null]
}

Table ProjectUser {
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  nickname String
  projectId String [not null]
  userId String [not null]
  project Project [not null]
  user User [not null]

  indexes {
    (projectId, userId) [pk]
  }
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Enum Role {
  ADMIN
  USER
}

Ref: ProjectUser.projectId > Project.id

Ref: ProjectUser.userId > User.id

Ref: Post.authorId > User.id